--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Checkout Halo
+        uses: actions/checkout@v3
         with: 
          repository: halo-dev/halo
          path: halo
          ref: v2.2.0
-      - uses: actions/checkout@v3
+         
+      - name:  Checkout Halo Console
+        uses: actions/checkout@v3
         with:
           repository: halo-dev/console
           ref: v2.2.0
@@ -64,4 +67,5 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
+         name: halo-jar
          path: halo/build/libs/halo-2.2.0.jar
